Closed Bug 1183235 Opened 10 years ago Closed 10 years ago

Keep the dochsell-specific markers inside a ObservedDocShell managed list instead of nsDocShell

Categories

(DevTools :: Performance Tools (Profiler/Timeline), defect)

defect
Not set
normal

Tracking

(firefox42 fixed)

RESOLVED FIXED
Firefox 42
Tracking Status
firefox42 --- fixed

People

(Reporter: vporof, Assigned: vporof)

References

Details

Attachments

(2 files, 1 obsolete file)

No description provided.
Attached patch v1Splinter Review
Assignee: nobody → vporof
Status: NEW → ASSIGNED
Attachment #8634459 - Flags: review?(ttromey)
Attachment #8634459 - Flags: review?(ttromey) → review?(bugs)
Attachment #8634459 - Flags: review?(bugs) → review+
Attached patch v2 (obsolete) — Splinter Review
Rebased.
Attachment #8635480 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 42
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attached patch v3Splinter Review
Fixed a crash. Previously, the lifetime of mTimelineMarkers was bound to the lifetime of the nsDocShell. In this bug, that was changed to be tied to the lifetime of an ObservedDocShell, meaning they are created when recording is enabled, and destroyed when disabled. However, `nsDocShell::PopProfileTimelineMarkers` doesn't handle the latter case, and assumes an existing markers storage. Updated the patch to handle the null case.
Attachment #8635480 - Attachment is obsolete: true
Attachment #8637932 - Flags: review+
Status: REOPENED → RESOLVED
Closed: 10 years ago10 years ago
Resolution: --- → FIXED
Product: Firefox → DevTools
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: